--- a/AAPM_SITE/css/style.css
+++ b/AAPM_SITE/css/style.css
@@ -5,42 +5,13 @@
     border: none;
 }
 
-/*cabeçalho*/
 
-#cabecalho{
-    background-color: transparent;
-    padding: 5px;
-    display: flex;
-    align-items: center;
-}
 
-.logo{
-    padding-left: 100px;
-}
-
-.lista {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+#links {
     padding-left: 10rem;
-    overflow: hidden;
 }
   
-.item{
-    float: left;
-    text-align: center;
-    justify-content: center;
-    padding: 20px;
-    text-decoration: none;
-  }
-
-.item a {
-    display: block;
-    color: rgb(0, 0, 0);
-    text-decoration: none;
-  }
-  
-.item a:hover {
+.nav-item a:hover {
     color: rgb(245, 33, 33);
   }
 
@@ -59,6 +30,25 @@
     text-align: center;
 }
 
+/**/
+
+.titulo-contribuicao{
+    color: rgb(250, 250, 250);
+    padding: 10px;
+    background-color: rgb(237, 3, 3);
+    text-align: center;
+}
+
+.conteudo-contribuicao{
+    padding-top: 20px;
+}
+
+
+#cards{
+    padding: 30px;
+}
+
+
 /*Rodape*/
 
 .rodape {
@@ -74,5 +64,21 @@
     text-align: center;
     margin-top: 15px;
     margin-left: 40px;
+ }
+
+ @media (max-width:550px){
+    .texto{
+        padding: 30px;
+    }
+    #links {
+        padding-left: 0;
+    }
+    #copyright p {
+        margin-left: 0px;
+     }
+
+     #cards{
+        padding: 10px;
+    }
  }
  
