--- a/AAPM_SITE/css/style2.css
+++ b/AAPM_SITE/css/style2.css
@@ -1,39 +1,10 @@
 /*cabeçalho*/
 
-#cabecalho{
-    background-color: transparent;
-    padding: 3px;
-    display: flex;
-    align-items: center;
-}
-
-.logo{
-    padding-left: 100px;
-}
-
-.lista {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+#links {
     padding-left: 10rem;
-    overflow: hidden;
 }
   
-.item{
-    float: left;
-    text-align: center;
-    justify-content: center;
-    padding: 20px;
-    text-decoration: none;
-  }
-
-.item a {
-    display: block;
-    color: rgb(0, 0, 0);
-    text-decoration: none;
-  }
-  
-.item a:hover {
+.nav-item a:hover {
     color: rgb(245, 33, 33);
   }
 
@@ -65,7 +36,9 @@
 }
 
 /*Rodape*/
-
+#copyright{
+    padding-top: 50px;
+}
 .rodape {
     padding: 0.5rem;
     background: rgb(237, 3, 3);
@@ -75,4 +48,20 @@
     color: rgb(0, 0, 0);
     font-size: 11px;
     text-align: center;
+    margin-top: 15px;
+    margin-left: 40px;
+ }
+
+.carousel-item img{
+    width: 300px;
+    height: auto;
+}
+
+ @media (max-width:550px){
+    #links {
+        padding-left: 0;
+    }
+    #copyright p {
+        margin-left: 0px;
+     }
  }
